# valyra

./: .gitignore  .gitmodules  .lintstagedrc.json  Cargo.toml  README.md  create_test_user.py  dfx.json  issue_10_body.json  issue_119.json  issue_84_details.md  issue_89.md  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.agent/workflows/: precise_e2e_test_flow.md
.github/: SECRET_SETUP.md
.github/workflows/: frontend-ci.yml  pipeline.yml  rust-ci.yml  sync-abis.yml
agents/: .env.example  Dockerfile  README.md  TESTING_SUMMARY.md  docker-compose.yml  matching_agent.py  negotiation_agent.py  requirements.txt  test_canister_api.py  test_canisters.py  test_full_cycle.py  test_health.py  test_startup.py  valuation_agent.py
backend/: Cargo.toml
backend/dispute_dao/: Cargo.toml
backend/dispute_dao/src/: lib.rs
backend/escrow/: Cargo.toml
backend/escrow/src/: escrow.did  lib.rs
backend/listing_registry/: Cargo.toml
backend/listing_registry/src/: lib.rs
backend/shared_types/: Cargo.toml
backend/shared_types/src/: lib.rs
backend/valuation_engine/: Cargo.toml
backend/valuation_engine/src/: lib.rs
docs/: README.md  base-track-alignment.md  challenges-and-resolutions.md  design-spec.md  openapi.yml  prd.md  tdd.md  tech-stack.md  valyra-summary.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
scripts/: README.md  deploy.sh  lint.sh  local_test.sh  sync_abis.py
template/: detail-listing-page.html  escrow-tracker.html  marketplace-page.html  wallet-connection-page.html
(+341 files in other folders)
