[workspace]
members = [
    "backend/shared_types",
    "backend/listing_registry", 
    "backend/valuation_engine",
    "backend/escrow",
    "backend/dispute_dao"
]
resolver = "2"

[workspace.dependencies]
ic-cdk = "0.12"
ic-stable-structures = "0.6"
ic-ledger-types = "0.4"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"