[workspace]
resolver = "2"
members = [
    "shared_types",
    "listing_registry", 
    "valuation_engine",
    "escrow",
    "dispute_dao"
]

[workspace.dependencies]
ic-cdk = "0.12"
ic-stable-structures = "0.6"
ic-ledger-types = "0.4"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"